--- a/index.html
+++ b/index.html
@@ -33,3 +33,188 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
   </body>
 </html>
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>CV - Marie Philippon</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f0f2f5;
+            color: #333;
+        }
+
+        header {
+            background-color: #4CAF50;
+            color: white;
+            padding: 20px;
+            text-align: center;
+        }
+
+        header h1 {
+            margin: 0;
+            font-size: 2.5em;
+        }
+
+        header p {
+            margin: 5px 0;
+            font-size: 1.2em;
+        }
+
+        section {
+            margin: 20px auto;
+            padding: 20px;
+            max-width: 900px;
+            background-color: white;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        }
+
+        h2 {
+            border-bottom: 2px solid #4CAF50;
+            padding-bottom: 10px;
+            margin-bottom: 20px;
+            color: #4CAF50;
+        }
+
+        ul {
+            list-style-type: none;
+            padding-left: 0;
+        }
+
+        ul li {
+            background-color: #eee;
+            padding: 10px;
+            margin-bottom: 10px;
+            border-radius: 5px;
+        }
+
+        footer {
+            text-align: center;
+            padding: 10px;
+            background-color: #4CAF50;
+            color: white;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+        }
+
+        .info-personnelles, .competences, .langues, .centres-interet, .formation, .experience {
+            margin-bottom: 20px;
+        }
+
+        h3 {
+            margin-top: 0;
+            font-size: 1.4em;
+            color: #333;
+        }
+
+        em {
+            font-style: italic;
+            color: #555;
+        }
+
+        p {
+            margin: 5px 0;
+        }
+    </style>
+</head>
+<body>
+
+    <header>
+        <h1>PHILIPPON Marie</h1>
+        <p>BTS Services Informatiques aux Organisations par alternance, Option : Solutions d'infrastructure, systèmes et réseaux</p>
+        <p>Email : marie.philippon2512@gmail.com | Téléphone : 07 82 68 12 24</p>
+    </header>
+
+    <section class="info-personnelles">
+        <h2>Informations Personnelles</h2>
+        <p><strong>Date de naissance :</strong> 25/12/2002 (21 ans)</p>
+        <p><strong>Adresse :</strong> 38 montée de l’église, 42330 CUZIEU</p>
+        <p><strong>Téléphone :</strong> 07 82 68 12 24</p>
+        <p><strong>Email :</strong> marie.philippon2512@gmail.com</p>
+        <p><strong>Permis :</strong> Permis B - Véhiculé</p>
+    </section>
+
+    <section class="competences">
+        <h2>Compétences et Aptitudes</h2>
+        <h3>Compétences :</h3>
+        <ul>
+            <li>Maîtrise des logiciels bureautiques</li>
+            <li>Stocker et organiser des données</li>
+            <li>Aide à la prise en main d’un ordinateur</li>
+            <li>Aide à la connexion d’imprimantes et périphériques en Bluetooth</li>
+        </ul>
+        <h3>Aptitudes :</h3>
+        <ul>
+            <li>Connaissance et respect des règles</li>
+            <li>Travail en équipe</li>
+            <li>Curiosité</li>
+            <li>Réservée</li>
+            <li>Sérieuse</li>
+            <li>Ponctuelle</li>
+        </ul>
+    </section>
+
+    <section class="langues">
+        <h2>Langues</h2>
+        <p><strong>Anglais :</strong> Niveau moyen</p>
+        <p><strong>Espagnol :</strong> Niveau débutant</p>
+    </section>
+
+    <section class="centres-interet">
+        <h2>Centres d'intérêt</h2>
+        <ul>
+            <li>Informatique</li>
+            <li>Voyages</li>
+        </ul>
+    </section>
+
+    <section class="formation">
+        <h2>Formation</h2>
+        <p><strong>Bac ST2S (Sciences et Technologies de la Santé et du Social)</strong></p>
+    </section>
+
+    <section class="experience">
+        <h2>Expériences Professionnelles</h2>
+
+        <div class="experience-item">
+            <h3>Agent de soins (ASHQ) - EPHAD (EPAHD à Chazelles-sur-Lyon)</h3>
+            <p><em>Août - 31 août 2024</em></p>
+        </div>
+
+        <div class="experience-item">
+            <h3>Agent de soins (ASHQ) - Hôpital Maurice André Saint Galmier</h3>
+            <p><em>Juillet - Août 2022</em></p>
+        </div>
+
+        <div class="experience-item">
+            <h3>Employée Libre-Service (Intérim) - Casino (Mise en rayon)</h3>
+            <p><em>Août 2021</em></p>
+        </div>
+
+        <div class="experience-item">
+            <h3>Inventoriste (Intérim) - Casino (Inventaire)</h3>
+            <p><em>Août 2021</em></p>
+        </div>
+
+        <div class="experience-item">
+            <h3>Agent de propreté - Jolibois Gaelle (Saint-Galmier)</h3>
+            <p><em>Juillet - Août 2021</em></p>
+        </div>
+
+        <div class="experience-item">
+            <h3>Stage infirmier - Études d’infirmière à Montbrison</h3>
+            <p><em>2020 - Juillet 2023</em></p>
+        </div>
+    </section>
+
+    <footer>
+        <p>&copy; 2024 Marie Philippon. Tous droits réservés.</p>
+    </footer>
+
+</body>
+</html>
