--- a/index.html
+++ b/index.html
@@ -3,40 +3,11 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  </head>
-  <body>
-    
-    <div class="container">
-        <div class="row">
-            <div class="col-2">
-                &nbsp;
-            </div>
-            <div class="col">
-                <div class="card" style="width: 18rem;">
-                    <div class="card-body">
-                      <h5 class="card-title">Mon CV</h5>
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#" class="btn btn-primary">Go somewhere</a>
-                    </div>
-                  </div>
-            </div>
-            <div class="col-2">
-                &nbsp;
-            </div>
-        </div>        
-    </div>
-      
+    <title>Bootstrap demo</title>        
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
   </body>
-</html>
-<!DOCTYPE html>
-<html lang="fr">
-<head>
-    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CV - Marie Philippon</title>
     <style>
@@ -49,7 +20,7 @@
         }
 
         header {
-            background-color: #4CAF50;
+            background-color: #98bfc4;
             color: white;
             padding: 20px;
             text-align: center;
@@ -74,7 +45,7 @@
         }
 
         h2 {
-            border-bottom: 2px solid #4CAF50;
+            border-bottom: 2px solid #98bfc4;
             padding-bottom: 10px;
             margin-bottom: 20px;
             color: #4CAF50;
@@ -95,7 +66,7 @@
         footer {
             text-align: center;
             padding: 10px;
-            background-color: #4CAF50;
+            background-color: #98bfc4;
             color: white;
             position: fixed;
             bottom: 0;
