--- a/index.html
+++ b/index.html
@@ -10,8 +10,15 @@
   </body>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CV - Marie Philippon</title>
-  
-  
+      <style>
+      .encadre {
+          border: 2px solid #b7e8fc; /* Bordure */
+          padding: 20px; /* Espace interne */
+          margin: 20px auto; /* Marge pour centrer */
+          max-width: 600px; /* Largeur maximale de l'encadré */
+          background-color: #f9f9f9; /* Couleur de fond */
+          box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Ombre légère */
+      }
   
 <body>
 
