--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html lang="fr">
 <head>
@@ -31,22 +30,16 @@
             box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
             margin-bottom: 10px;
         }
-        .table th, .table td {
-            vertical-align: middle;
+        .progress-bar {
+            background-color: #0066cc;
         }
         footer {
             margin-top: 30px;
             font-size: 0.9rem;
             color: #666;
         }
-        a {
-            color: #0066cc;
-            text-decoration: none;
-        }
-        a:hover {
-            text-decoration: underline;
-        }
         .icon {
+            font-size: 1.5rem;
             margin-right: 10px;
             color: #0066cc;
         }
@@ -60,40 +53,112 @@
             <p><em>BTS SIO - Solutions d'Infrastructure, Systèmes et Réseaux</em></p>
         </header>
 
-        <!-- Personal Information -->
+        <!-- Informations personnelles -->
         <section class="mt-4">
-            <h2 class="section-header"><i class="fas fa-user icon"></i>Informations Personnelles</h2>
-            <div class="p-3 bg-white rounded shadow-sm">
-                <p><strong>Nom :</strong> Marie Philippon</p>
-                <p><strong>Date de naissance :</strong> 25/12/2002</p>
-                <p><strong>Téléphone :</strong> 07 82 ** ** **</p>
-                <p><strong>Email :</strong> <a href="mailto:marie.philippon@example.com">marie.philippon@example.com</a></p>
-            </div>
-        </section>
-
-        <!-- Experiences Professionnelles -->
-        <section class="mt-4">
-            <h2 class="section-header"><i class="fas fa-briefcase icon"></i>Expériences Professionnelles</h2>
+            <h2 class="section-header">Informations Personnelles</h2>
             <ul class="list-group">
-                <li class="list-group-item">
-                    <strong>Agent de soins (ASHQ)</strong> - EPHAD à Chazelles-sur-Lyon <br>
-                    <em>01 août 2023 - 31 août 2024</em>
-                </li>
-                <!-- Autres expériences similaires -->
+                <li class="list-group-item"><strong>Nom :</strong> Marie Philippon</li>
+                <li class="list-group-item"><strong>Date de naissance :</strong> 25 décembre 2002</li>
+                <li class="list-group-item"><strong>Téléphone :</strong> 07 82 ** ** **</li>
+                <li class="list-group-item"><strong>Email :</strong> marie.philippon@example.com</li>
             </ul>
         </section>
 
         <!-- Formation -->
         <section class="mt-4">
-            <h2 class="section-header"><i class="fas fa-graduation-cap icon"></i>Formation</h2>
+            <h2 class="section-header">Formation</h2>
             <ul class="list-group">
-                <li class="list-group-item">
-                    <strong>BTS SIO</strong> - CFAI Loire Drôme Ardèche <br>
-                    <em>2024 - 2026</em>
-                </li>
-                <!-- Autres formations -->
+                <li class="list-group-item"><strong>BTS SIO Option SIRS</strong> - CFAI Loire Drôme Ardèche<br><em>2024 - 2026</em></li>
+                <li class="list-group-item"><strong>Bac ST2S</strong><br><em>2018 - 2021</em></li>
             </ul>
         </section>
+
+        <!-- Compétences et Aptitudes -->
+        <section class="mt-4">
+            <h2 class="section-header">Compétences et Aptitudes</h2>
+            <div class="container text-center">
+                <div class="row align-items-start">
+                    <div class="col">
+                        <h3>Compétences :</h3>
+                        <ul class="list-group">
+                            <li class="list-group-item">Maîtrise des logiciels bureautiques</li>
+                            <li class="list-group-item">Stocker et organiser des données</li>
+                            <li class="list-group-item">Aide à la prise en main d’un ordinateur</li>
+                            <li class="list-group-item">Connexion d’imprimantes et périphériques en Bluetooth</li>
+                        </ul>
+                    </div>
+                    <div class="col">
+                        <h3>Aptitudes :</h3>
+                        <ul class="list-group">
+                            <li class="list-group-item">Connaissance et respect des règles</li>
+                            <li class="list-group-item">Travail en équipe</li>
+                            <li class="list-group-item">Curiosité</li>
+                            <li class="list-group-item">Sérieuse</li>
+                            <li class="list-group-item">Ponctuelle</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Langues et Centres d'intérêt -->
+       <!-- Langues -->
+<section class="mt-4">
+    <h2 class="section-header">Langues et Centres d'intérêt</h2>
+    <div class="row">
+        <!-- Langues -->
+        <div class="col-md-6">
+            <h3>Langues :</h3>
+            <ul class="list-group">
+                <li class="list-group-item">
+                    <strong>Anglais :</strong>
+                    <div class="progress mt-2" style="height: 8px;">
+                        <div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                    <small>Niveau : Débutant</small>
+                </li>
+                <li class="list-group-item">
+                    <strong>Espagnol :</strong>
+                    <div class="progress mt-2" style="height: 8px;">
+                        <div class="progress-bar" role="progressbar" style="width: 15%;" aria-valuenow="15" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                    <small>Niveau : Débutant</small>
+                </li>
+            </ul>
+        </div>
+        <!-- Centres d'intérêt -->
+        <div class="col-md-6">
+            <h3>Centres d'intérêt :</h3>
+            <ul class="list-group">
+                <li class="list-group-item">
+                    <i class="fas fa-laptop icon"></i>Informatique
+                </li>
+                <li class="list-group-item">
+                    <i class="fas fa-plane icon"></i>Voyages
+                    <li class="list-group-item">
+                        <i class="fas fa-users icon"></i> Moments en famille et amis
+                    </li>
+                    
+                </li>
+            </ul>
+        </div>
+    </div>
+</section>
+
+
+        <!-- Expériences Professionnelles -->
+        <section class="mt-4">
+            <h2 class="section-header">Expériences Professionnelles</h2>
+            <ul class="list-group">
+                <li class="list-group-item"><strong>Agent de soins (ASHQ)</strong> - EPHAD à Chazelles-sur-Lyon<br><em>01 août 2023 - 31 août 2024</em></li>
+                <li class="list-group-item"><strong>Agent de soins (ASHQ)</strong> - Hôpital Maurice André Saint Galmier<br><em>Juillet - Août 2022</em></li>
+                <li class="list-group-item"><strong>Employée Libre-Service (Intérim)</strong> - Casino (Mise en rayon)<br><em>Août 2021</em></li>
+                <li class="list-group-item"><strong>Inventoriste (Intérim)</strong> - Casino (Inventaire)<br><em>Août 2021</em></li>
+                <li class="list-group-item"><strong>Agent de propreté</strong> - Jolibois Gaelle, Saint-Galmier<br><em>Juillet - Août 2021</em></li>
+            </ul>
+        </section>
+
+
 
         <!-- Footer -->
         <footer class="text-center mt-4">
@@ -102,5 +167,6 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/js/all.min.js"></script>
 </body>
 </html>
