--- a/index.html
+++ b/index.html
@@ -101,13 +101,12 @@
             </div>
         </section>
 
-        <!-- Langues et Centres d'intérêt -->
-       <!-- Langues -->
+     <!-- Langues et Centres d'intérêt -->
 <section class="mt-4">
     <h2 class="section-header">Langues et Centres d'intérêt</h2>
     <div class="row">
         <!-- Langues -->
-        <div class="col-md-6">
+        <div class="col-md-6 me-3">
             <h3>Langues :</h3>
             <ul class="list-group">
                 <li class="list-group-item">
@@ -127,23 +126,23 @@
             </ul>
         </div>
         <!-- Centres d'intérêt -->
-        <div class="col-md-6">
+        <div class="col-md-5">
             <h3>Centres d'intérêt :</h3>
             <ul class="list-group">
                 <li class="list-group-item">
-                    <i class="fas fa-laptop icon"></i>Informatique
+                    <i class="fas fa-laptop icon"></i> Informatique
                 </li>
                 <li class="list-group-item">
-                    <i class="fas fa-plane icon"></i>Voyages
-                    <li class="list-group-item">
-                        <i class="fas fa-users icon"></i> Moments en famille et amis
-                    </li>
-                    
+                    <i class="fas fa-plane icon"></i> Voyages
+                </li>
+                <li class="list-group-item">
+                    <i class="fas fa-users icon"></i> Moments en famille et amis
                 </li>
             </ul>
         </div>
     </div>
 </section>
+
 
 
         <!-- Expériences Professionnelles -->
