--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title> CV Professionnel de Marie Philippon | BTS SIO - Réseaux et Compétences IT </title>
     <meta name="description" content="Découvrez le CV de Marie Philippon, étudiante en BTS SIO spécialité SIRS, avec des compétences en systèmes et réseaux, ainsi que des expériences professionnelles variées.">
+    <meta name="keywords" content="CV, Marie Philippon, BTS SIO, réseaux, systèmes, infrastructure, informatique, compétences, expériences professionnelles">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <style>
