--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title> CV Professionnel de Marie Philippon | BTS SIO - Réseaux et Compétences IT </title>
+    <title> CV Professionnel de Marie Philippon | BTS SIO option SIRS </title>
     <meta name="description" content="Découvrez le CV de Marie Philippon, étudiante en BTS SIO spécialité SIRS, avec des compétences en systèmes et réseaux, ainsi que des expériences professionnelles variées.">
     <meta name="keywords" content="CV, Marie Philippon, BTS SIO, réseaux, systèmes, infrastructure, informatique, compétences, expériences professionnelles">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
