--- a/index.html
+++ b/index.html
@@ -58,7 +58,6 @@
 </head>
 <body>
     <div class="container mt-5">
-        <!-- Header -->
         <header>
             <h1>Marie Philippon</h1>
             <p><em>BTS SIO - Solutions d'Infrastructure, Systèmes et Réseaux</em></p>
@@ -70,12 +69,12 @@
             </a>
         </div>
 
-        <!-- À propos de moi -->
+
         <section class="mt-4">
             <h2 class="section-header">À propos de moi</h2>
             <p>Étudiante en BTS SIO option SIRS, je suis passionnée par les systèmes et réseaux informatiques. Sérieuse et curieuse, je m'efforce de toujours apprendre et d’appliquer mes connaissances pour résoudre des problèmes techniques et contribuer à des projets professionnels.</p>
         </section>
-        <!-- Informations personnelles -->
+
         <section class="mt-4">
             <h2 class="section-header">Informations Personnelles</h2>
             <ul class="list-group">
@@ -84,9 +83,15 @@
                 <li class="list-group-item"><strong>Téléphone :</strong> 07 82 ** ** **</li>
                 <li class="list-group-item"><strong>Email :</strong> marie.philippon@example.com</li>
             </ul>
-        </section>
+            <a href="chemin/vers/votre/cv.pdf" class="btn btn-primary" download>Télécharger le CV</a>
+        </ul>
+        <div class="text-center my-4">
+            <a href="CV_Marie_Philippon.pdf" class="btn btn-primary">
+                <i class="fas fa-download"></i> Télécharger le CV
+            </a>
+        </div>
+    </section>
 
-        <!-- Formation -->
         <section class="mt-4">
             <h2 class="section-header">Formation</h2>
             <ul class="list-group">
@@ -95,7 +100,6 @@
             </ul>
         </section>
 
-        <!-- Compétences et Aptitudes -->
         <section class="mt-4">
             <h2 class="section-header">Compétences et Aptitudes</h2>
             <div class="container text-center">
@@ -123,11 +127,9 @@
             </div>
         </section>
 
-     <!-- Langues et Centres d'intérêt -->
      <section class="mt-4">
         <h2 class="section-header">Langues et Centres d'intérêt</h2>
         <div class="row">
-            <!-- Langues -->
             <div class="col-md-6">
                 <h3>Langues :</h3>
                 <ul class="list-group">
@@ -141,7 +143,6 @@
                     </li>
                 </ul>
             </div>
-            <!-- Centres d'intérêt -->
             <div class="col-md-6">
                 <h3>Centres d'intérêt :</h3>
                 <ul class="list-group">
@@ -159,10 +160,6 @@
         </div>
     </section>
 
-
-
-
-        <!-- Expériences Professionnelles -->
         <section class="mt-4">
             <h2 class="section-header">Expériences Professionnelles</h2>
             <ul class="list-group">
@@ -174,9 +171,6 @@
             </ul>
         </section>
 
-
-
-        <!-- Footer -->
         <footer class="text-center mt-4">
             <p>&copy; 2024 Marie Philippon. Tous droits réservés.</p>
         </footer>
