--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <header>
             <div class="d-flex align-items-center justify-content-between header-content">
                 <div class="me-3">
-                    <img src="image.jpg" alt="Photo de profil" class="rounded-circle" style="width: 100px; height: 100px;">
+                    <img src="image0.jpeg" alt="Photo de profil" class="rounded-circle" style="width: 100px; height: 100px;">
                 </div>
 
                 <div class="text-center flex-grow-1 mx-3">
