--- a/index.html
+++ b/index.html
@@ -100,6 +100,8 @@
                 <li class="list-group-item"><strong>Date de naissance :</strong> 25 décembre 2002</li>
                 <li class="list-group-item"><strong>Téléphone :</strong> 07 82 ** ** **</li>
                 <li class="list-group-item"><strong>Email :</strong> marie.philippon@example.com</li>
+                <li class="list-group-item"><strong>Adresse postale :</strong> 42330 Cuzieu</li>
+                <li class="list-group-item"><strong>Permis :</strong> B + véhiculer</li>
             </ul>
 
         <section class="mt-4">
