--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             background-color: #f4f4f9;
             color: #333;
         }
+
         header {
             background-color: #0066cc;
             color: #fff;
@@ -22,28 +23,34 @@
             text-align: center;
             box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
         }
+
         .section-header {
             margin-bottom: 20px;
             color: #0066cc;
         }
+
         .list-group-item {
             background-color: #ffffff;
             border: none;
             box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
             margin-bottom: 10px;
         }
+
         
         .list-group-item:hover {
             background-color: #f0f8ff;
         }
+
         .progress-bar {
             background-color: #0066cc;
         }
+
         footer {
             margin-top: 30px;
             font-size: 0.9rem;
             color: #666;
         }
+
         .icon {
             font-size: 1.5rem;
             margin-right: 10px;
@@ -54,31 +61,32 @@
         .btn-primary:hover {
             background-color: #005bb5;
         }
+
         .me-3 {
              margin-right: 20px;
         }
+
         .mx-3 {
             margin-left: 20px;
             margin-right: 20px;
         }
+
         .ms-3 {
             margin-left: 20px;
         }
     </style>
 </head>
+
 <body>
     <div class="container mt-5">
         <header>
             <div class="d-flex align-items-center justify-content-between header-content">
                 <div class="me-3">
                     <img src="image0.jpeg" alt="Photo de profil" class="rounded-circle" style="width: 100px; height: 100px;">
-                </div>
-
-                <div class="text-center flex-grow-1 mx-3">
+                    <div class="text-center flex-grow-1">
                     <h1>Marie Philippon</h1>
                     <p><em>BTS SIO - Solutions d'Infrastructure, Systèmes et Réseaux</em></p>
                 </div>
-
                 <div class="ms-3">
                     <a href="CV_Marie_Philippon.pdf" class="btn btn-primary">
                         <i class="fas fa-download"></i> Télécharger le CV
@@ -87,7 +95,7 @@
             </div>
         </header>
 
-
+    <main>
         <section class="mt-4">
             <h2 class="section-header">À propos de moi</h2>
             <p>Étudiante en BTS SIO option SIRS, je suis passionnée par les systèmes et réseaux informatiques. Sérieuse et curieuse, je m'efforce de toujours apprendre et d’appliquer mes connaissances pour résoudre des problèmes techniques et contribuer à des projets professionnels.</p>
@@ -103,6 +111,7 @@
                 <li class="list-group-item"><strong>Adresse postale :</strong> 42330 Cuzieu</li>
                 <li class="list-group-item"><strong>Permis :</strong> B + véhiculer</li>
             </ul>
+        </section>
 
         <section class="mt-4">
             <h2 class="section-header">Formation</h2>
@@ -111,7 +120,8 @@
                 <li class="list-group-item"><strong>Bac ST2S</strong><br><em>2018 - 2021</em></li>
             </ul>
         </section>
-
+   </main>
+   
         <section class="mt-4">
             <h2 class="section-header">Compétences et Aptitudes</h2>
             <div class="container text-center">
