--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
                     <p><em>BTS SIO - Solutions d'Infrastructure, Systèmes et Réseaux</em></p>
                 </div>
                 <div class="ms-3">
+                    <div class="text-center text-md-end"></div>
                     <a href="CV_Marie_Philippon.pdf" class="btn btn-primary">
                         <i class="fas fa-download"></i> Télécharger le CV
                     </a>
@@ -121,7 +122,7 @@
             </ul>
         </section>
    </main>
-   
+
         <section class="mt-4">
             <h2 class="section-header">Compétences et Aptitudes</h2>
             <div class="container text-center">
