--- a/index.html
+++ b/index.html
@@ -80,9 +80,10 @@
 <body>
     <div class="container mt-5">
         <header>
-            <div class="d-flex align-items-center justify-content-between header-content">
+            <div class="d-flex flex-column flex-md-row align-items-center justify-content-between header-content">
                 <div class="me-3">
-                    <img src="image0.jpeg" alt="Photo de profil" class="rounded-circle" style="width: 100px; height: 100px;">
+                    <div class="text-center me-md-3 mb-3 mb-md-0">
+                     <img src="image0.jpeg" alt="Photo de profil" class="rounded-circle" style="width: 100px; height: 100px;">
                 </div>
 
                 <div class="text-center flex-grow-1 mx-3">
@@ -93,7 +94,6 @@
                 <div class="text-center text-md-end">
                     <a href="CV_Marie_Philippon.pdf" class="btn btn-primary">
                         <i class="fas fa-download"></i> Télécharger le CV
-
                     </a>
                 </div>
             </div>
