--- a/index.html
+++ b/index.html
@@ -81,16 +81,14 @@
     <div class="container mt-5">
         <header>
             <div class="d-flex flex-column flex-md-row align-items-center justify-content-between header-content">
-                    <div class="text-center me-md-3 mb-3 mb-md-0">
-                     <img src="image0.jpeg" alt="Photo de profil" class="rounded-circle" style="width: 100px; height: 100px;">
+                <div class="me-3">
+                    <img src="image0.jpeg" alt="Photo de profil" class="rounded-circle" style="width: 100px; height: 100px;">
                 </div>
-
                 <div class="text-center flex-grow-1 mx-3">
                     <h1>Marie Philippon</h1>
                     <p><em>BTS SIO - Solutions d'Infrastructure, Systèmes et Réseaux</em></p>
                 </div>
-
-                <div class="text-center text-md-end">
+                <div class="ms-3">
                     <a href="CV_Marie_Philippon.pdf" class="btn btn-primary">
                         <i class="fas fa-download"></i> Télécharger le CV
                     </a>
