--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
                 margin-top: 10px;
                 width: 100%;
             }
+        }
     </style>
 </head>
 <body>
@@ -178,6 +179,8 @@
 
         <footer class="text-center mt-4">
             <p>&copy; 2024 Marie Philippon. Tous droits réservés.</p>
+        </footer>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/js/all.min.js"></script>
 </body>
