--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title> CV Professionnel de Marie Philippon | BTS SIO option SIRS </title>
-    <meta name="description" content="Découvrez le CV de Marie Philippon, étudiante en BTS SIO spécialité SIRS, avec des compétences en systèmes et réseaux, ainsi que des expériences professionnelles variées.">
-    <meta name="keywords" content="CV, Marie Philippon, BTS SIO, réseaux, systèmes, infrastructure, informatique, compétences, expériences professionnelles">
+    <meta name="description" content="Découvrez le CV de Marie Philippon, étudiante en BTS Services Informatiques aux Organisations, option Solutions d’Infrastructure, Systèmes et Réseaux. Avec un parcours mêlant formation et expériences professionnelles variées, elle se distingue par sa polyvalence et son sérieux.">
+    <meta name="keywords" content="CV, Marie Philippon, BTS SIO, systèmes, réseaux, infrastructure, informatique, compétences, expériences, alternance, rigueur, polyvalence, sérieux, formation, technologies, projets, apprentissage, solutions, organisation, services, études">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <noscript>
