--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
             font-family: 'Roboto', sans-serif;
             background-color: #f4f4f9;
             color: #333;
+            margin: 0;
+            padding: 0;
         }
         header {
             background-color: #0066cc;
@@ -34,7 +36,6 @@
             background-color: #ffffff;
             border: none;
             box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
-            margin-bottom: 10px;
         }
         .list-group-item:hover {
             background-color: #f0f8ff;
