--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <header>
             <div class="d-flex flex-column flex-md-row align-items-center justify-content-between header-content">
                 <div class="me-3">
-                    <img src="image0.jpeg" alt="Photo de profil" class="rounded-circle" style="width: 100px; height: 100px;">
+                <img src="image0.webp" alt="Photo de profil" class="rounded-circle" style="width: 80px; height: auto;">
                 </div>
                 <div class="text-center flex-grow-1 mx-3">
                     <h1>Marie Philippon</h1>
