--- a/index.html
+++ b/index.html
@@ -6,13 +6,10 @@
     <title> CV Professionnel de Marie Philippon | BTS SIO option SIRS </title>
     <meta name="description" content="Découvrez le CV de Marie Philippon, étudiante en BTS Services Informatiques aux Organisations, option Solutions d’Infrastructure, Systèmes et Réseaux. Avec un parcours mêlant formation et expériences professionnelles variées, elle se distingue par sa polyvalence et son sérieux.">
     <meta name="keywords" content="CV, Marie Philippon, BTS SIO, systèmes, réseaux, infrastructure, informatique, compétences, expériences, alternance, rigueur, polyvalence, sérieux, formation, technologies, projets, apprentissage, solutions, organisation, services, études">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <link rel="preload" href="image0.jpeg" as="image">
-    <noscript>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-        <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
-    </noscript>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" media="print" onload="this.media='all'">
+    <noscript><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"></noscript>
+    <style>
     <style>
         body {
             font-family: 'Roboto', sans-serif;
@@ -58,6 +55,10 @@
         .btn-primary:hover {
             background-color: #005bb5;
         }
+        img {
+            max-width: 100%;
+            height: auto;
+        }      
         @media (max-width: 576px) {
             .header-content {
                 flex-direction: column;
@@ -78,7 +79,7 @@
         <header>
             <div class="d-flex flex-column flex-md-row align-items-center justify-content-between header-content">
                 <div class="me-3">
-                <img src="image0.webp" alt="Photo de profil" class="rounded-circle" style="width: 80px; height: auto;">
+                <img src="image0.jpeg" alt="Photo de profil" class="rounded-circle" style="width: 80px; height: auto;">
                 </div>
                 <div class="text-center flex-grow-1 mx-3">
                     <h1>Marie Philippon</h1>
