--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Découvrez le CV de Marie Philippon, étudiante en BTS Services Informatiques aux Organisations, option Solutions d’Infrastructure, Systèmes et Réseaux. Avec un parcours mêlant formation et expériences professionnelles variées, elle se distingue par sa polyvalence et son sérieux.">
     <meta name="keywords" content="CV, Marie Philippon, BTS SIO, systèmes, réseaux, infrastructure, informatique, compétences, expériences, alternance, rigueur, polyvalence, sérieux, formation, technologies, projets, apprentissage, solutions, organisation, services, études">
     <link rel="preload" href="image0.jpeg" as="image">
+    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" as="style">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" media="print" onload="this.media='all'">
     <noscript><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"></noscript>
     <style>
@@ -58,6 +59,8 @@
         img {
             max-width: 100%;
             height: auto;
+            width: 80px;
+            height: 80px;
         }      
         @media (max-width: 576px) {
             .header-content {
@@ -71,6 +74,9 @@
                 margin-top: 10px;
                 width: 100%;
             }
+        }
+        .btn-primary {
+            min-height: 40px;
         }
     </style>
 </head>
