--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <meta name="description" content="Découvrez le CV de Marie Philippon, étudiante en BTS Services Informatiques aux Organisations, option Solutions d’Infrastructure, Systèmes et Réseaux. Avec un parcours mêlant formation et expériences professionnelles variées, elle se distingue par sa polyvalence et son sérieux.">
     <meta name="keywords" content="CV, Marie Philippon, BTS SIO, systèmes, réseaux, infrastructure, informatique, compétences, expériences, alternance, rigueur, polyvalence, sérieux, formation, technologies, projets, apprentissage, solutions, organisation, services, études">
     <link rel="preload" href="image0.jpeg" as="image">
-    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" as="style">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" media="print" onload="this.media='all'">
     <noscript><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"></noscript>
     <style>
@@ -50,8 +49,7 @@
         .icon {
             font-size: 1.5rem;
             margin-right: 10px;
-            color: 
-            #0066cc;
+            color:#0066cc;
         }
         .btn-primary:hover {
             background-color: #005bb5;
@@ -167,13 +165,13 @@
                 <h3>Centres d'intérêt :</h3>
                 <ul class="list-group">
                     <li class="list-group-item">
-                        <i class="fas fa-laptop icon"></i> Informatique
+                        <i class="fas fa-laptop"></i> Informatique
                     </li>
                     <li class="list-group-item">
-                        <i class="fas fa-plane icon"></i> Voyages
+                        <i class="fas fa-plane"></i> Voyages
                     </li>
                     <li class="list-group-item">
-                        <i class="fas fa-users icon"></i> Moments en famille et amis
+                        <i class="fas fa-users"></i> Moments en famille et amis
                     </li>
                 </ul>
             </div>
