--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <meta name="description" content="Découvrez le CV de Marie Philippon, étudiante en BTS Services Informatiques aux Organisations, option Solutions d’Infrastructure, Systèmes et Réseaux. Avec un parcours mêlant formation et expériences professionnelles variées, elle se distingue par sa polyvalence et son sérieux.">
     <meta name="keywords" content="CV, Marie Philippon, BTS SIO, systèmes, réseaux, infrastructure, informatique, compétences, expériences, alternance, rigueur, polyvalence, sérieux, formation, technologies, projets, apprentissage, solutions, organisation, services, études">
     <link rel="preload" href="image0.jpeg" as="image">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" media="print" onload="this.media='all'">
-    <noscript><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"></noscript>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <style>
     <style>
         body {
@@ -38,18 +37,10 @@
         .list-group-item:hover {
             background-color: #f0f8ff;
         }
-        .progress-bar {
-            background-color: #0066cc;
-        }
         footer {
             margin-top: 30px;
             font-size: 0.9rem;
             color: #666;
-        }
-        .icon {
-            font-size: 1.5rem;
-            margin-right: 10px;
-            color:#0066cc;
         }
         .btn-primary:hover {
             background-color: #005bb5;
@@ -83,7 +74,7 @@
         <header>
             <div class="d-flex flex-column flex-md-row align-items-center justify-content-between header-content">
                 <div class="me-3">
-                <img src="image0.jpeg" alt="Photo de profil" class="rounded-circle" style="width: 80px; height: auto;">
+                <img src="image0.jpeg" alt="Photo de profil" class="rounded-circle" width="80" height="80">    
                 </div>
                 <div class="text-center flex-grow-1 mx-3">
                     <h1>Marie Philippon</h1>
@@ -99,7 +90,7 @@
         <section class="mt-4">
             <h2 class="section-header">À propos de moi</h2>
             <p>Étudiante en BTS SIO option SIRS, je suis passionnée par les systèmes et réseaux informatiques. Sérieuse et curieuse, je m'efforce de toujours apprendre et d’appliquer mes connaissances pour résoudre des problèmes techniques et contribuer à des projets professionnels.</p>
-        </section>
+        </section>       
 
         <section class="mt-4">
             <h2 class="section-header">Informations Personnelles</h2>
