--- a/index.html
+++ b/index.html
@@ -60,10 +60,12 @@
                 width: 100%;
             }
         }
+    }
         .btn-primary {
             min-height: 40px;
         }
     </style>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" media="all">
 </head>
 <body>
     <div class="container mt-5">
