--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <link rel="preload" href="image0.jpeg" as="image">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" media="all">
     <style>
-    <style>
         body {
             font-family: 'Roboto', sans-serif;
             background-color: #f4f4f9;
@@ -17,6 +16,8 @@
             margin: 0;
             padding: 0;
         }
+
+        /* Bloc header corrigé */
         header {
             background-color: #0066cc;
             color: #fff;
@@ -25,6 +26,7 @@
             text-align: center;
             box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
         }
+ 
         .section-header {
             margin-bottom: 20px;
             color: #0066cc;
