--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <style>
         body {
+            font-size: 16px;
             font-family: 'Roboto', sans-serif;
             background-color: #f4f4f9;
             color: #333;
@@ -52,7 +53,8 @@
             height: auto;
             width: 80px;
             height: 80px;
-        }      
+        }  
+          
         @media (max-width: 576px) {
             .header-content {
                 flex-direction: column;
