--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>CV Professionnel de Marie Philippon | BTS SIO option SIRS</title>
-    <meta name="description" content="Découvrez le CV de Marie Philippon, étudiante en BTS Services Informatiques aux Organisations, option Solutions d’Infrastructure, Systèmes et Réseaux.">
-    <meta name="keywords" content="CV, Marie Philippon, BTS SIO, systèmes, réseaux, infrastructure, informatique, compétences, expériences, alternance, rigueur, polyvalence, sérieux, formation, technologies, projets, apprentissage, solutions, organisation, services, études">
+    <title>Marie Philippon | CV Professionnel - BTS SIO option SIRS et Réseaux</title>
+    <meta name="description" content="Découvrez le CV de Marie Philippon, étudiante en BTS SIO, option Solutions d’Infrastructure, Systèmes et Réseaux. Compétences en informatique et en gestion réseau">
     
     <link rel="preload" href="styles.css" as="style">
     <link rel="preload" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" as="style">
