--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Découvrez le CV de Marie Philippon, étudiante en BTS SIO, option Solutions d’Infrastructure, Systèmes et Réseaux. Compétences en informatique et gestion réseau.">
     <meta name="keywords" content="Marie Philippon, CV informatique, BTS SIO, option SIRS, Solutions d’Infrastructure, Systèmes et Réseaux, compétences IT, gestion réseaux, alternance IT, informatique, réseau, étudiant BTS, IT support, infrastructure réseau">
     <meta name="author" content="Marie Philippon">
-    <title>Marie Philippon | CV Professionnel - BTS SIO option SIRS</title>
+    <title>Marie Philippon | Curriculum vitae Professionnel - BTS SIO option SIRS</title>
 
     <link rel="preload" href="styles.css" as="style">
     <link rel="preload" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" as="style">
